add font and customize bootstrap

--- a/css/style.css
+++ b/css/style.css
@@ -6,5 +6,15 @@
 
 
 :root {
-    --clr-primary : #EDC47C;
+    --bs-primary-rgb : 237, 196 , 124;
+     --bs-dark-rgb: 103 , 57 , 44;
 }
+
+@font-face {
+    font-family: 'roboto';
+    src: url('../font/Roboto/Roboto-Regular.ttf') format('truetype');
+
+    font-family: 'poppins' ;
+    src: url('../font/Poppins/Poppins-Regular.ttf') format('truetype');
+}
+
